--- a/src/index.html
+++ b/src/index.html
@@ -3,37 +3,38 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Kinetic Typography Page Transition | Codrops</title>
+		<title>Banku Inu | A Samurai's Tale | A Blockchain Game</title>
 		<meta name="description" content="A page transition concept based on a kinetic typography motion effect." />
 		<meta name="keywords" content="page transition, motion, kinetic typography, type, gsap, animation, javascript" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/cwg6wqv.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
+		<link rel="preload" href="./fonts/shoguns-clan.regular.ttf" as="font" type="font/ttf" crossorigin>
 
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
 	<body class="loading">
 		<main>
 			<div class="type" data-type-transition aria-hidden="true">
-				<div class="type__line">bonjour bonjour bonjour</div>
-				<div class="type__line">attrayant attrayant attrayant</div>
-				<div class="type__line">charmante charmante charmante</div>
-				<div class="type__line">rosetta rosetta rosetta</div>
-				<div class="type__line">tendresse tendresse tendresse</div>
-				<div class="type__line">chatoyer chatoyer chatoyer</div>
-				<div class="type__line">bonjour bonjour bonjour</div>
-				<div class="type__line">attrayant attrayant attrayant</div>
-				<div class="type__line">charmante charmante charmante</div>
-				<div class="type__line">rosetta rosetta rosetta</div>
-				<div class="type__line">tendresse tendresse tendresse</div>
+				<div class="type__line">Stars, hide your fires</div>
+				<div class="type__line">Let not light see</div>
+				<div class="type__line">my black and deep desires</div>
+				<div class="type__line">my sword of vengeance</div>
+				<div class="type__line">shall draw blood</div>
+				<div class="type__line">the dark samurai</div>
+				<div class="type__line">Stars, hide your fires</div>
+				<div class="type__line">Let not light see</div>
+				<div class="type__line">my black and deep desires</div>
+				<div class="type__line">my sword of vengeance</div>
+				<div class="type__line">shall draw blood</div>
 			</div>
 			<div class="frame">
 				<div class="frame__title-wrap">
 					<h1 class="frame__title">Kinetic Typography Page Transition</h1>
 					<p class="frame__tagline">Inspired by this <a href="https://dribbble.com/shots/16174007-Kinetic-Typography">shot</a></p>
 				</div>
-				<div class="frame__author"><a href="https://www.twitter.com/codrops" class="link-alt">@codrops</a></div>
+				<div class="frame__author"><div class="banku"><span>Banku</span></div></div>
 				<nav class="frame__links">
 					<a href="http://tympanus.net/Development/MenuThumbStackAnimation/">Previous demo</a>
 					<a href="https://tympanus.net/codrops/?p=56722">Article</a>
@@ -44,7 +45,7 @@
 				<figure class="item" data-article="article-1">
 					<img class="item__img" src="img/1.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
-						<h2 class="item__caption-title">01 &mdash; A Poem</h2>
+						<h2 class="item__caption-title">01 &mdash; Death Before Dishonor</h2>
 						<p class="item__caption-description">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
 					</figcaption>
 				</figure>
@@ -75,7 +76,7 @@
 				<article class="article" id="article-1">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/large/1.jpg)"></div></div>
 					<span class="article__number">01</span>
-					<h2 class="article__title">A Poem</h2>
+					<h2 class="article__title">Death</h2>
 					<p class="article__intro">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
 					<p class="article__description">The great historic hour is near, when the first Integral will rise into the limitless space of the universe. A thousand years ago your heroic ancestors subjected the whole earth to the power of the United State. A still more glorious task is before you,—the integration of the indefinite equation of the Cosmos by the use of the glass, electric, fire-breathing Integral.</p>
 				</article>
