--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,17 @@
 			</div>
 			<div class="frame">
 				<div class="frame__title-wrap">
-					<h1 class="frame__title">Kinetic Typography Page Transition</h1>
-					<p class="frame__tagline">Inspired by this <a href="https://dribbble.com/shots/16174007-Kinetic-Typography">shot</a></p>
+					<h1 class="frame__title">Banku Inu - A Samurai's Tale of vengeance</h1>
+					<!-- <p class="frame__tagline">Inspired by real life events</a></p> -->
 				</div>
-				<div class="frame__author"><div class="banku"><span>Banku</span></div></div>
+				<div class="frame__author">
+					<div class="banku">
+					</div>
+				</div>
 				<nav class="frame__links">
-					<a href="http://tympanus.net/Development/MenuThumbStackAnimation/">Previous demo</a>
-					<a href="https://tympanus.net/codrops/?p=56722">Article</a>
-					<a href="https://github.com/codrops/KineticTypePageTransition/">GitHub</a>
+					<a href="#">Blood Red Paper</a>
+					<a href="#">Roadmap</a>
+					<a href="#">Token</a>
 				</nav>
 			</div>
 			<section class="item-wrap">
