--- a/src/index.html
+++ b/src/index.html
@@ -46,28 +46,28 @@
 			</div>
 			<section class="item-wrap">
 				<figure class="item" data-article="article-1">
-					<img class="item__img" src="img/1.jpg" alt="Some title"/>
+					<img class="item__img" src="img/sams/honor.jpg" alt="honor"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">01 &mdash; Death Before Dishonor</h2>
 						<p class="item__caption-description">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-2">
-					<img class="item__img" src="img/2.jpg" alt="Some title"/>
+					<img class="item__img" src="img/sams/honor2.jpg" alt="honor"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">02 &mdash; Harmony</h2>
 						<p class="item__caption-description">From behind the Green Wall from some unknown plains the wind brings to us the yellow honeyed pollen of flowers.</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-3">
-					<img class="item__img" src="img/3.jpg" alt="Some title"/>
+					<img class="item__img" src="img/sams/honor3.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">03 &mdash; A Coat</h2>
 						<p class="item__caption-description">I looked over all that I wrote down yesterday and I find that my descriptions are not sufficiently clear.</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-4">
-					<img class="item__img" src="img/4.jpg" alt="Some title"/>
+					<img class="item__img" src="img/sams/honor4.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">04 &mdash; Epilepsy</h2>
 						<p class="item__caption-description">The auditorium: an enormous half-globe of glass with the sun piercing through.</p>
@@ -77,28 +77,28 @@
 			<section class="article-wrap">
 				<button class="back"><svg viewBox="0 0 50 9" width="100%"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg></button>
 				<article class="article" id="article-1">
-					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/large/1.jpg)"></div></div>
+					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor.jpg)"></div></div>
 					<span class="article__number">01</span>
 					<h2 class="article__title">Death</h2>
 					<p class="article__intro">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
 					<p class="article__description">The great historic hour is near, when the first Integral will rise into the limitless space of the universe. A thousand years ago your heroic ancestors subjected the whole earth to the power of the United State. A still more glorious task is before you,—the integration of the indefinite equation of the Cosmos by the use of the glass, electric, fire-breathing Integral.</p>
 				</article>
 				<article class="article" id="article-2">
-					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/large/2.jpg)"></div></div>
+					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor2.jpg)"></div></div>
 					<span class="article__number">02</span>
 					<h2 class="article__title">Harmony</h2>
 					<p class="article__intro">From behind the Green Wall from some unknown plains the wind brings to us the yellow honeyed pollen of flowers.</p>
 					<p class="article__description">One’s lips are dry from this sweet dust. Every moment one passes one’s tongue over them. Probably, all women whom I meet in the street (and men certainly also), have today sweet lips. </p>
 				</article>
 				<article class="article" id="article-3">
-					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/large/3.jpg)"></div></div>
+					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor3.jpg)"></div></div>
 					<span class="article__number">03</span>
 					<h2 class="article__title">A Coat</h2>
 					<p class="article__intro">I looked over all that I wrote down yesterday and I find that my descriptions are not sufficiently clear.</p>
 					<p class="article__description"> That is, everything would undoubtedly be clear to one of us but who knows to whom my Integral will some day bring these records? Perhaps you, like our ancestors, have read the great book of civilization only up to the page of nine hundred years ago.</p>
 				</article>
 				<article class="article" id="article-4">
-					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/large/4.jpg)"></div></div>
+					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor4.jpg)"></div></div>
 					<span class="article__number">04</span>
 					<h2 class="article__title">Epilepsy</h2>
 					<p class="article__intro">The auditorium: an enormous half-globe of glass with the sun piercing through.</p>
