--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,13 @@
 				</div>
 				<div class="frame__author">
 					<div class="banku">
+						<!-- <img class="logo" src="img/sams/Samurai_helmet_mm.png" alt="banku Inu logo"/> -->
 					</div>
 				</div>
 				<nav class="frame__links">
+					<a href="https://pancakeswap.finance/info/token/0x12e3d51d14c6cb1f3053b9f27dd19314945f45cc" target="_blank">Banku Token</a>
 					<a href="#">Blood Red Paper</a>
 					<a href="#">Roadmap</a>
-					<a href="#">Token</a>
 				</nav>
 			</div>
 			<section class="item-wrap">
@@ -55,21 +56,21 @@
 				<figure class="item" data-article="article-2">
 					<img class="item__img" src="img/sams/honor2.jpg" alt="honor"/>
 					<figcaption class="item__caption">
-						<h2 class="item__caption-title">02 &mdash; Harmony</h2>
+						<h2 class="item__caption-title">02 &mdash; Idols Become Rivals</h2>
 						<p class="item__caption-description">From behind the Green Wall from some unknown plains the wind brings to us the yellow honeyed pollen of flowers.</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-3">
 					<img class="item__img" src="img/sams/honor3.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
-						<h2 class="item__caption-title">03 &mdash; A Coat</h2>
+						<h2 class="item__caption-title">03 &mdash; Betrayal</h2>
 						<p class="item__caption-description">I looked over all that I wrote down yesterday and I find that my descriptions are not sufficiently clear.</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-4">
 					<img class="item__img" src="img/sams/honor4.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
-						<h2 class="item__caption-title">04 &mdash; Epilepsy</h2>
+						<h2 class="item__caption-title">04 &mdash; Ghostly Moves Of A Ronin</h2>
 						<p class="item__caption-description">The auditorium: an enormous half-globe of glass with the sun piercing through.</p>
 					</figcaption>
 				</figure>
@@ -79,28 +80,28 @@
 				<article class="article" id="article-1">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor.jpg)"></div></div>
 					<span class="article__number">01</span>
-					<h2 class="article__title">Death</h2>
+					<h2 class="article__title">Honor</h2>
 					<p class="article__intro">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
 					<p class="article__description">The great historic hour is near, when the first Integral will rise into the limitless space of the universe. A thousand years ago your heroic ancestors subjected the whole earth to the power of the United State. A still more glorious task is before you,—the integration of the indefinite equation of the Cosmos by the use of the glass, electric, fire-breathing Integral.</p>
 				</article>
 				<article class="article" id="article-2">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor2.jpg)"></div></div>
 					<span class="article__number">02</span>
-					<h2 class="article__title">Harmony</h2>
+					<h2 class="article__title">Rivals</h2>
 					<p class="article__intro">From behind the Green Wall from some unknown plains the wind brings to us the yellow honeyed pollen of flowers.</p>
 					<p class="article__description">One’s lips are dry from this sweet dust. Every moment one passes one’s tongue over them. Probably, all women whom I meet in the street (and men certainly also), have today sweet lips. </p>
 				</article>
 				<article class="article" id="article-3">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor3.jpg)"></div></div>
 					<span class="article__number">03</span>
-					<h2 class="article__title">A Coat</h2>
+					<h2 class="article__title">Betrayal</h2>
 					<p class="article__intro">I looked over all that I wrote down yesterday and I find that my descriptions are not sufficiently clear.</p>
 					<p class="article__description"> That is, everything would undoubtedly be clear to one of us but who knows to whom my Integral will some day bring these records? Perhaps you, like our ancestors, have read the great book of civilization only up to the page of nine hundred years ago.</p>
 				</article>
 				<article class="article" id="article-4">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor4.jpg)"></div></div>
 					<span class="article__number">04</span>
-					<h2 class="article__title">Epilepsy</h2>
+					<h2 class="article__title">Ronin</h2>
 					<p class="article__intro">The auditorium: an enormous half-globe of glass with the sun piercing through.</p>
 					<p class="article__description">The circular rows of noble, globe-like, closely-shaven heads. With joy in my heart I looked around. I believe I was looking in the hope of seeing the rose-colored scythe, the dear lips of O-, somewhere among the blue waves of the unifs. Then I saw extraordinarily white, sharp teeth like the.... But no! </p>
 				</article>
