--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
 			</div>
 			<div class="frame">
 				<div class="frame__title-wrap">
-					<h1 class="frame__title">Banku Inu - A Samurai's Tale of vengeance</h1>
+					<h1 class="frame__title">Banku - A Samurai's Tale of vengeance</h1>
 					<!-- <p class="frame__tagline">Inspired by real life events</a></p> -->
 				</div>
 				<div class="frame__author">
 					<div class="banku">
-						<!-- <img class="logo" src="img/sams/Samurai_helmet_mm.png" alt="banku Inu logo"/> -->
+						<!-- <img class="logo" src="img/sams/Samurai_helmet_mm.png" alt="banku logo"/> -->
 					</div>
 				</div>
 				<nav class="frame__links">
@@ -50,21 +50,21 @@
 					<img class="item__img" src="img/sams/honor.jpg" alt="honor"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">01 &mdash; Death Before Dishonor</h2>
-						<p class="item__caption-description">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
+						<p class="item__caption-description"> It's in every man's mind to love honor. The honor which men confer is not good honor. It's too often nothing higher than vain glory...</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-2">
 					<img class="item__img" src="img/sams/honor2.jpg" alt="honor"/>
 					<figcaption class="item__caption">
-						<h2 class="item__caption-title">02 &mdash; Idols Become Rivals</h2>
-						<p class="item__caption-description">From behind the Green Wall from some unknown plains the wind brings to us the yellow honeyed pollen of flowers.</p>
+						<h2 class="item__caption-title">02 &mdash; Deserters of duty</h2>
+						<p class="item__caption-description">From some unknown plains the wind brought us together. Deserters of duty. Betrayers of sacred oaths and maxims...</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-3">
 					<img class="item__img" src="img/sams/honor3.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">03 &mdash; Betrayal</h2>
-						<p class="item__caption-description">I looked over all that I wrote down yesterday and I find that my descriptions are not sufficiently clear.</p>
+						<p class="item__caption-description">I looked over all that I wrote down since the past spring and I'm certain our defacto leader is threatened by my charisma...</p>
 					</figcaption>
 				</figure>
 				<figure class="item" data-article="article-4">
@@ -81,21 +81,21 @@
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor.jpg)"></div></div>
 					<span class="article__number">01</span>
 					<h2 class="article__title">Honor</h2>
-					<p class="article__intro">I, D-503, the builder of the Integral, I am only one of the many mathematicians of the United State.</p>
-					<p class="article__description">The great historic hour is near, when the first Integral will rise into the limitless space of the universe. A thousand years ago your heroic ancestors subjected the whole earth to the power of the United State. A still more glorious task is before you,—the integration of the indefinite equation of the Cosmos by the use of the glass, electric, fire-breathing Integral.</p>
+					<p class="article__intro">"It's in every man's mind to love honor. The honor which men confer is not good honor. It's too often nothing higher than vain glory. Those whom my Lord ennobles, he can make common again."</p>
+					<p class="article__description"> I was trained to obey without question. I have dispatched brutality to the cause of my Lord, in the name of honor. But to cut down a pregnant girl?</p>
 				</article>
 				<article class="article" id="article-2">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor2.jpg)"></div></div>
 					<span class="article__number">02</span>
-					<h2 class="article__title">Rivals</h2>
-					<p class="article__intro">From behind the Green Wall from some unknown plains the wind brings to us the yellow honeyed pollen of flowers.</p>
-					<p class="article__description">One’s lips are dry from this sweet dust. Every moment one passes one’s tongue over them. Probably, all women whom I meet in the street (and men certainly also), have today sweet lips. </p>
+					<h2 class="article__title">Deserters</h2>
+					<p class="article__intro">From some unknown plains the wind brought us together. Deserters of duty. Betrayers of sacred oaths and maxims.</p>
+					<p class="article__description">Strangers united under one banner for survival and retribution. We ride hard and ambush evil lords of the lands. Rebels with a just cause. We strike fear in the fearless hearts of strong men.</p>
 				</article>
 				<article class="article" id="article-3">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor3.jpg)"></div></div>
 					<span class="article__number">03</span>
 					<h2 class="article__title">Betrayal</h2>
-					<p class="article__intro">I looked over all that I wrote down yesterday and I find that my descriptions are not sufficiently clear.</p>
+					<p class="article__intro">I looked over all that I wrote down in the past spring and I'm certain our defacto leader is threatened by my charisma, and enticed by richies offered by my former lord.</p>
 					<p class="article__description"> That is, everything would undoubtedly be clear to one of us but who knows to whom my Integral will some day bring these records? Perhaps you, like our ancestors, have read the great book of civilization only up to the page of nine hundred years ago.</p>
 				</article>
 				<article class="article" id="article-4">
