--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<title>Banku Inu | A Samurai's Tale | A Blockchain Game</title>
 		<meta name="description" content="A page transition concept based on a kinetic typography motion effect." />
 		<meta name="keywords" content="page transition, motion, kinetic typography, type, gsap, animation, javascript" />
-		<meta name="author" content="Codrops" />
+		<meta name="author" content="Codrop" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/cwg6wqv.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
@@ -96,7 +96,7 @@
 					<span class="article__number">03</span>
 					<h2 class="article__title">Betrayal</h2>
 					<p class="article__intro">I looked over all that I wrote down in the past spring and I'm certain our defacto leader is threatened by my charisma, and enticed by richies offered by my former lord.</p>
-					<p class="article__description"> That is, everything would undoubtedly be clear to one of us but who knows to whom my Integral will some day bring these records? Perhaps you, like our ancestors, have read the great book of civilization only up to the page of nine hundred years ago.</p>
+					<p class="article__description">The cues to betrayal are obvious to the leery. Men are bad at concealing intentions in anticipation of treachery. They overplay their act of normalcy. The cues likely to be missed are of a woman whose loyalty you think you've earned. </p>
 				</article>
 				<article class="article" id="article-4">
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor4.jpg)"></div></div>
