--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 				</div>
 				<nav class="frame__links">
 					<a href="https://pancakeswap.finance/info/token/0x12e3d51d14c6cb1f3053b9f27dd19314945f45cc" target="_blank">Banku Token</a>
-					<a href="#">Blood Red Paper</a>
+					<a href="#">Blood Red Paper (Lore)</a>
 					<a href="#">Roadmap</a>
 				</nav>
 			</div>
@@ -71,7 +71,7 @@
 					<img class="item__img" src="img/sams/honor4.jpg" alt="Some title"/>
 					<figcaption class="item__caption">
 						<h2 class="item__caption-title">04 &mdash; Ghostly Moves Of A Ronin</h2>
-						<p class="item__caption-description">The auditorium: an enormous half-globe of glass with the sun piercing through.</p>
+						<p class="item__caption-description">I unburdened the oath to my Lord, and he connived with my new "brothers" for brutal revenge. I haunt my enemies in the afterlife.</p>
 					</figcaption>
 				</figure>
 			</section>
@@ -102,8 +102,8 @@
 					<div class="article__img-wrap"><div class="article__img" style="background-image:url(img/sams/honor4.jpg)"></div></div>
 					<span class="article__number">04</span>
 					<h2 class="article__title">Ronin</h2>
-					<p class="article__intro">The auditorium: an enormous half-globe of glass with the sun piercing through.</p>
-					<p class="article__description">The circular rows of noble, globe-like, closely-shaven heads. With joy in my heart I looked around. I believe I was looking in the hope of seeing the rose-colored scythe, the dear lips of O-, somewhere among the blue waves of the unifs. Then I saw extraordinarily white, sharp teeth like the.... But no! </p>
+					<p class="article__intro">I unburdened the oath to my Lord, and he connived with my new "brothers" for brutal revenge. I haunt my enemies in the afterlife.</p>
+					<p class="article__description">In this cold, unmarked, shallow grave I lie. The remains of my loyal dog not too far off. If the tears of sorrow be worthy enough, we may rise again to its cause. Dispatching brutality to the wicked </p>
 				</article>
 			</section>
 		</main>
