--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
 					</div>
 				</div>
 				<nav class="frame__links">
-					<a href="https://pancakeswap.finance/info/token/0x12e3d51d14c6cb1f3053b9f27dd19314945f45cc" target="_blank">Banku Token</a>
-					<a href="#">Blood Red Paper (Lore)</a>
-					<a href="#">Roadmap</a>
+					<a href="https://docs.bankutoken.com/banku-token/how-to-buy" target="_blank">Banku Token</a>
+					<a href="https://docs.bankutoken.com/lore/chapter-1" target="_black">Blood Red Paper</a>
+					<a href="https://docs.bankutoken.com/roadmap/it-begins" target="_black">Roadmap</a>
 				</nav>
 			</div>
 			<section class="item-wrap">
